welcome page new layout set up

--- a/assets/stylesheets/scss/_pages.scss.erb
+++ b/assets/stylesheets/scss/_pages.scss.erb
@@ -198,9 +198,17 @@ grid-section content LogIn page
 }
 
 .display-inline{
-  display: inline-block;
+  display: inline-block; 
 }
 
+.search-engine-container{
+  padding: $inner-spacing;
+  position: relative;
+}
+
+.search-tool-container{
+  margin-top: 1rem;
+}
 
 .search-results{
    @include breakpoint(small down){
@@ -212,6 +220,17 @@ grid-section content LogIn page
     padding-right:3.5rem;
   }
   margin-top: 2.5rem;
+}
+
+.info-welcome-section-container{
+  margin: 0 $inner-spacing;
+  position:relative;  
+  margin-bottom: 3rem;
+}
+
+.info-text-welcome-section{
+  position: absolute;
+  top: 0.5rem;
 }
 
 
