images and audio splitted in 2 columns + mutlimedia blocks title

--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -542,6 +542,12 @@ button{
   width: calc(100% - 2rem);
 }
 
+.manage-multimedia-btn{
+  position: absolute;
+  right: 0.75rem;
+  top: 0.5rem;
+}
+
 
 /*===============================================
 COMPONENTS
