--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -587,14 +587,20 @@ Production Section
   margin-left: 3.2rem;
 }
 
+
+.video-title-box{
+  border: 1px solid $grey-2;
+  padding-top:2rem;
+  padding-bottom:2rem; 
+  width: 40rem;
+  margin-left: 3.2rem;
+  margin-top: 2rem;
+}
+
   .video-production-container .fb-post iframe, .video-production-container .fb-post span{
   max-height: 22.5rem;
-    // margin: 0 auto;
 }  
-//     height: 10.5rem;
-//     position: relative;
-//     // margin-left: 6rem;
-// }
+
 
 .noembed-meta-info{
   display: none;
@@ -605,30 +611,32 @@ Production Section
   // width: 100%;
   position:relative;
   display: block;
-  margin-top: 2rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
 }
 
 .single-image-container {
+  // @include horizontal-center;
   position:relative;
-  margin-top: 2rem;
+  // margin-top: 2rem;
   display: inline-block;
-  width: 23.1rem;
-  vertical-align: middle;  
+  width: 22.7rem;
+  // vertical-align: middle;  
 }
 
 .single-image-content{
-  @include horizontal-center;
+  width: 350px;
   position: relative;
   display: inline-block;  
+  margin:0 auto;
+  margin-top: 2rem;
+  text-align: center;
 } 
 
 .multimedia-container{
   padding-bottom: 2rem;
 }
 
-// .single-image-container .fb-post iframe{
-// max-height:233px;
-// }
 
 .single-image-container .noembed-wrapper {
   max-width: 350px;
@@ -636,6 +644,37 @@ Production Section
   border: 1px solid $grey-2;
 }
 
-// .noembed-flickr {
-//   max-height: 350px;
-// }
+.image-audio-title{
+  padding:$inner-spacing;
+}
+
+.images-title-box{
+  border: 1px solid $grey-2;
+  padding-top:3rem;
+  padding-bottom:3rem; 
+  width: 20rem;
+}
+
+
+.images-title-box h6, .video-title-box h6{
+  text-align: center;
+}
+
+.video-production-container, .image-production-container{
+  position:relative;
+  width: 100%;
+  display: block;
+  // padding: 0.5rem;
+}
+
+.image-production-container{
+  -webkit-column-count: 2; /* Chrome, Safari, Opera */
+  -moz-column-count: 2; /* Firefox */
+  column-count: 2;
+  padding: 0 $inner-spacing;
+  margin-top: 2rem;
+}
+
+.single-image-content span{
+  overflow: inherit;
+}
