--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -607,14 +607,15 @@ Production Section
 .video-production-container{
   position: relative;
   width: 100%;
+  padding: 0 $inner-spacing;
 }
 
 .multimedia-container .video-production-container iframe{
-  height: 22.5rem;
-  width: 40rem;
+  height: 25.5rem;;
+  width: 718px;
   display:block;
   position: relative;
-  margin-left: 3.2rem;
+  // margin-left: 3.2rem;
 }
 
 
@@ -622,13 +623,12 @@ Production Section
   border: 1px solid $grey-2;
   padding-top:1rem;
   padding-bottom:1rem; 
-  width: 40rem;
-  margin-left: 3.2rem;
+  width: 718px;
   margin-top: 2rem;
 }
 
   .video-production-container .fb-post iframe, .video-production-container .fb-post span{
-  max-height: 22.5rem;
+  max-height: 25.5rem;
 }  
 
 
@@ -678,7 +678,7 @@ Production Section
   border: 1px solid $grey-2;
   padding-top:3rem;
   padding-bottom:3rem; 
-  width: 20rem;
+  width: 350px;
 }
 
 
@@ -704,4 +704,12 @@ Production Section
 
 .single-image-content span{
   overflow: inherit;
+}
+
+.single-image-content .Embed{
+  width: 326px;
+}
+
+.single-image-content .instagram-media{
+  width: 344px;
 }
