--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -69,6 +69,7 @@ Header
     height: auto;
     font-size: $smallSize;
     width: 200px;
+    padding: 0.4rem
   }
 }
 
@@ -559,7 +560,7 @@ Profile Section
 }
 
 .type-icon-info-box{
-  color: $grey-4;
+  color: $grey-3;
   font-size: 1.8rem;
 }
 
