--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -81,6 +81,15 @@ main {
   min-height: 100vh;
 }
 
+a, a:active, a:visited, a:hover {
+  color: $grey-4;
+}
+
+a:hover{
+  text-decoration: underline;
+}
+
+
 .whole-container {
     overflow-y: scroll;
     height: 100%;
@@ -333,7 +342,7 @@ BUTTONS
 }
 
 .pard-btn:hover{
-    @include linearGradient(#383737,$element-background);
+    background: rgba(0,0,0,0.8);
   }
 button{
    outline: none;
@@ -455,7 +464,7 @@ button{
   background: rgb(68, 196, 35);
 }
 
-.signupButton:hover{
+.signupButton:hover, .signupButton-alert:hover{
     background: rgba(68, 196, 35,0.8);
 
 }
@@ -469,7 +478,7 @@ button{
   // margin-bottom: 1.5rem;
   @include border-radius($element-border-radius);
   font-size: $almostNormalSize;
-  @include linearGradient(#b9daad, #6cb252);
+  background: rgb(68, 196, 35);
   position: relative;
   margin-left:3rem;
 }
@@ -496,7 +505,8 @@ button{
 .toUserPage-btn{
   height:3rem;
   width: 100%;
-  font-weight: normal;
+  font-weight: bold;
+  font-size: $almostNormalSize;
 }
 
 .modify-section-content-button-container{
@@ -708,6 +718,26 @@ Profile Card
 // .name-profileCard:hover{
 // 		text-shadow:0 0 3px rgba(255, 0, 0, 0.5);
 // } 
+
+
+/*-----------------
+Dropdown
+-------------------*/
+
+.is-dropdown-submenu-item:hover{
+  background: $grey-1;
+}
+
+.is-dropdown-submenu-item{
+  font-size:$almostNormalSize;
+}
+
+
+.is-dropdown-submenu-item a, .is-dropdown-submenu-item a:hover{
+  color: black;
+  text-decoration: none;
+}
+
 
 
 /*==============================================
