--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -732,11 +732,11 @@ Production Section
 // }
 
 
-.multimedia-manager-message li{
-  // display: inline-block;
-  float: left;
-  margin-right: 2rem;
-}
+// .multimedia-manager-message li{
+//   // display: inline-block;
+//   float: left;
+//   margin-right: 2rem;
+// }
 
 .multimedia-manager-message ul{
   margin-bottom: 0.4rem;
