--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -458,12 +458,8 @@ button{
   font-weight: bold;
   width: 100%;
   height: 3rem;
-  // padding-top:0.5rem;
-  // padding-bottom:0.5rem;
   margin-bottom: $pard-grid-spacing;
   @include border-radius($element-border-radius);
-  // font-size: $smallSize;
-  // @include linearGradient(#b9daad, #6cb252);
   background: rgb(56, 133, 255);
 }
 
@@ -485,20 +481,29 @@ button{
   margin-left:3rem;
 }
 
-.signUp-button-welcome-section{
-  background: white;
-  font-weight: bold;
-  @include border-radius($element-border-radius);
-  padding: 1rem 3.5rem;
-  border: 2px solid $grey-2;
-  font-size: 21px;
-  position: absolute;
-  left:17rem;
-  top: 0;
-}
+// .signUp-button-welcome-section{
+//   background: white;
+//   font-weight: bold;
+//   @include border-radius($element-border-radius);
+//   padding: 1rem 3.5rem;
+//   border: 2px solid $grey-2;
+//   font-size: 21px;
+//   position: absolute;
+//   left:17rem;
+//   top: 0;
+// }
 
-.signUp-button-welcome-section:hover{
-  box-shadow: 0px 1px 1px 1px rgba(10, 10, 10, 0.2);
+// .signUp-button-welcome-section:hover{
+//   box-shadow: 0px 1px 1px 1px rgba(10, 10, 10, 0.2);
+// }
+
+.signUp-button-welcome-section{
+  @extend .pard-btn;
+  position: absolute;
+  top: -2.5rem;
+  right: 0.5rem;
+  font-size: 1rem;
+  padding: 0.5rem 2rem;
 }
 
 .toUserPage-btn{
