multimedia manager popup design finished

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -764,3 +764,17 @@ Production Section
 .multimedia-manager-message p{
   margin-bottom: 0.3rem;
 }
+
+.multimedia-manager-input-label{
+  margin-bottom: 0.3rem;
+  margin-top: 1rem;
+}
+
+.cloudinary_fileupload{
+  margin-bottom: 1.5rem;
+}
+
+.file-upload-thumbnail{
+  margin-bottom: 0.7rem;
+}
+
