--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -608,6 +608,34 @@ Profile Section
   margin-bottom: 0rem;
 }
 
+
+.myProposals-field-label{
+  font-size: $almostNormalSize;
+  display: block;
+}
+
+
+.postData-container{
+  position: relative;
+  margin-bottom: 3rem;
+  margin-top:2rem;
+
+}
+
+.postData-container textarea{
+  margin-top: -0.5rem;
+  font-size: $almostNormalSize;
+}
+
+.myproposal-final-message{
+  font-size:14px;
+  margin-bottom: 3rem;
+}
+
+// .avilability-info-text{
+//   margin-bottom: 0.5rem;
+// }
+
 /*-----------------
 Production Section
 -------------------*/
