--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -117,6 +117,10 @@ a.profileCard:hover{
   outline: 1px solid red;
 }
 
+.select2-container {
+  min-width:100%;
+  }
+
 /*===============================================
 GENERAL LAYOUT
 ================================================*/
