details to design and colors

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -11,6 +11,16 @@ LOGIN PAGE
   background:white; 
 }
 
+.register-form-final-mex{
+  font-size: $almostNormalSize;
+  margin-top: 2rem;
+}
+
+.register-form-init-mex{
+  font-size: $almostNormalSize;
+  margin-bottom: 2rem;
+}
+
 
 
 /*------------------
