--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -121,6 +121,10 @@ a.profileCard:hover{
   min-width:100%;
   }
 
+.select2-container .select2-selection--multiple{
+  border-radius: $element-border-radius;
+}
+
 /*===============================================
 GENERAL LAYOUT
 ================================================*/
@@ -462,7 +466,9 @@ button{
   font-weight: bold;
   width: 100%;
   height: 3rem;
-  margin-bottom: $pard-grid-spacing;
+  // margin-bottom: $pard-grid-spacing;
+  margin-bottom: 0.8rem;
+  margin-top:1rem;
   @include border-radius($element-border-radius);
   background: rgb(56, 133, 255);
 }
@@ -883,6 +889,18 @@ select, textarea, a{
 
 .message-form{
     margin-bottom: 2rem;
+}
+
+.init-message-form{
+  margin-bottom: 2rem;
+  font-size: $almostNormalSize;
+}
+
+.final-message-form{
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  color: red;
+  font-size:$almostNormalSize;
 }
 
 .title-part{
