no display messages for search

--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -1139,3 +1139,11 @@ ICONS
 .icon-book-open, .icon-theatre{
   font-size: 1.3rem;  
 }
+
+/*==============================================
+SEARCH
+===============================================*/
+
+.select2-results__message {
+  display: none !important;
+}
