--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -760,7 +760,7 @@ Production Section
   border: 1px solid $grey-2;
   padding-top:3rem;
   padding-bottom:3rem; 
-  width: 350px;
+  width: 95%;
 }
 
 
