flickr display correctly

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -798,6 +798,14 @@ Production Section
   width: 344px;
 }
 
+.flickr-embed-image-iframe{
+  width: 100%;
+  height: auto;
+  border: none;
+}
+
+
+
 // .single-image-content .noembed-flickr{
 //   width: 332px;
 //   position:relative;
