--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -678,14 +678,13 @@ Production Section
   width: 100%;
   background-color: $grey-1;
   min-height: 1.5rem;
-  @include breakpoint (medim) {margin-top: -0.5rem};
+  @include breakpoint (medium) {margin-top: -0.5rem};
   padding: 0 $inner-spacing;
   position: relative;
 }
 
 .multimedia-icon-title-box{
   font-size: 1.4rem;
-  // vertical-align: -0.2rem;
 }
 
 .video-production-container{
@@ -695,10 +694,17 @@ Production Section
 }
 
 .multimedia-container .video-production-container iframe{
-  height: 25.5rem;;
-  width: 718px;
+  // height: 25.5rem;;
+  // width: 718px;
+  width: 100%;
+  height: 25.5rem;
   display:block;
   position: relative;
+  @include breakpoint (small down){
+    height: -moz-calc(100vw * 0.57);
+    height: -webkit-calc(100vw * 0.57);
+    height: calc(100vw * 0.57);
+  }
   // margin-left: 3.2rem;
 }
 
@@ -707,11 +713,11 @@ Production Section
   border: 1px solid $grey-2;
   padding-top:1rem;
   padding-bottom:1rem; 
-  width: 718px;
+  width: 100%;
   margin-top: 2rem;
 }
 
-  .video-production-container .fb-post iframe, .video-production-container .fb-post span{
+.video-production-container .fb-post iframe, .video-production-container .fb-post span{
   max-height: 25.5rem;
 }  
 
@@ -745,6 +751,7 @@ Production Section
 
 .multimedia-container{
   padding-bottom: 2rem;
+  word-wrap: break-word;
 }
 
 .single-image-container .noembed-wrapper {
@@ -795,7 +802,7 @@ Production Section
 }
 
 .single-image-content .instagram-media{
-  width: 344px;
+  width: 100%;
 }
 
 .flickr-embed-image-iframe{
@@ -803,26 +810,6 @@ Production Section
   height: auto;
   border: none;
 }
-
-
-
-// .single-image-content .noembed-flickr{
-//   width: 332px;
-//   position:relative;
-//   display: block;
-// }
-
-// iframe.flickr-embed-frame{
-//   max-width: 332px;
-//   height: auto;
-// }
-
-
-// .multimedia-manager-message li{
-//   // display: inline-block;
-//   float: left;
-//   margin-right: 2rem;
-// }
 
 .multimedia-manager-message ul{
   margin-bottom: 0.4rem;
