--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -832,6 +832,12 @@ Production Section
   margin-bottom: 0.7rem;
 }
 
+.bandcamp-audioPlayer{
+border: 0;
+width: 100%; 
+height: 120px;
+}
+
 /*------------
 SMALL!!!
 -------------*/
