--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -833,13 +833,13 @@ Production Section
   margin-bottom: 0.7rem;
 }
 
-.bandcamp-audioPlayer{
-border: 0;
-width: 100%; 
-height: 120px;
-}
+// .bandcamp-audioPlayer{
+// border: 0;
+// width: 100%; 
+// height: 120px;
+// }
 
-.info{
+#inline_player.inline_player{
   max-width: 100%;
 }
 
@@ -862,5 +862,9 @@ SMALL!!!
  }
  .images-title-box{
   width: 100%;
+ }
+ .large-bandcamp-audio-player iframe{
+    width: 100%;
+    height: 
  }
 }
